--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+@import "./reset.css";
+@import "./loader.css";
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+}
+
 .byTimeWeather__field {
   display: flex;
 }
@@ -9,7 +23,16 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
-  background: powderblue;
+  background: #678ec7;
   top: 0;
   left: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s linear, opacity 0.3s linear;
+}
+
+.AddrSearch.active {
+  visibility: visible;
+  opacity: 1;
+  z-index: 100;
 }
