--- a/css/page.css
+++ b/css/page.css
@@ -1,6 +1,8 @@
 #App {
   width: 100vw;
   height: 100vh;
+  /* font-family: "Nanum Gothic", sans-serif; */
+  font-family: "Sunflower", sans-serif;
 }
 
 #Page-Container {
@@ -8,8 +10,14 @@
   background: #222;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
   z-index: 1;
+  -ms-overflow-style: none;
+}
+
+#Page-Container::-webkit-scrollbar {
+  display: none;
 }
 
 #Page-Wrapper {
@@ -24,11 +32,13 @@
 
 .page {
   width: 100vw;
-  height: 100vh;
-  border: 3px solid yellow;
-  background: powderblue;
-  color: white;
+  background: #ff8686;
+  color: black;
   float: left;
   /* transition: all 1s; */
   position: relative;
+}
+
+.page > section {
+  height: 100vh;
 }
