--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 @import "./reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap");
 @import "./loader.css";
 @import "./page.css";
+@import "./CurrentWeather.css";
+
 *,
 *:before,
 *:after {
