--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 @import "./reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap");
+@import "./weather-icons.css";
 @import "./loader.css";
 @import "./page.css";
 @import "./CurrentWeather.css";
+@import "./MainWeather.css";
 
 *,
 *:before,
@@ -11,16 +13,16 @@
   box-sizing: border-box;
 }
 
-/* For Mobile */
-
-.byTimeWeather__field {
-  display: flex;
+body,
+html {
+  min-width: 360px;
 }
+
+/* For Mobile */
 
 /*임시 addrSearch*/
 
 .AddrSearch {
-  border: 3px solid red;
   width: 100vw;
   height: 100vh;
   position: fixed;
