--- a/css/page.css
+++ b/css/page.css
@@ -1,8 +1,4 @@
 #App {
-  width: 100vw;
-  min-width: 360px;
-  height: 100vh;
-  /* font-family: "Nanum Gothic", sans-serif; */
   font-family: "Sunflower", sans-serif;
 }
 
@@ -33,12 +29,10 @@
 
 .page {
   width: 100vw;
+  max-width: 1280px;
   min-width: 360px;
   background: #ff8686;
-  color: black;
   float: left;
-  /* transition: all 1s; */
-  position: relative;
 }
 
 .page > section {
