--- a/css/MainWeather.css
+++ b/css/MainWeather.css
@@ -1,66 +1,153 @@
+:root {
+  --white-color: #fbfbfc;
+}
+
 /*Common*/
 .MainWeather__wrapper {
-  border: 1px solid red;
-  padding: 0;
+  padding: 1rem;
 }
 
 .MainWeather__header {
-  margin-bottom: 5rem;
+  margin-bottom: 7rem;
+  color: var(--white-color);
+  font-size: 2.75rem;
+}
+
+.MainWeather__timeStamp > div {
+  margin-bottom: 0.75rem;
 }
 
 .MainWeather__section {
-  background: #fff;
+  background: var(--white-color);
 }
 
 .byTimeWeather {
-  padding: 1.5rem;
+  padding: 2.5rem 2rem;
 }
 
 .byTimeWeather__title {
   text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
-}
-
-.byTimeWeather__wrapper {
+  font-size: 2.25rem;
+  margin-bottom: 3rem;
 }
 
 .byTimeWeather__field {
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   cursor: pointer;
+  position: relative;
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  padding-bottom: 1rem;
+  -ms-overflow-style: none;
+  transition: all 0.5s;
+}
+
+.byTimeWeather__field::-webkit-scrollbar {
+  display: none;
+}
+
+.byTimeWeather__field.active {
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
 }
 
 .byTimeWeather__field > ul {
   display: inline-block;
+  padding: 0 0.75rem;
+}
+
+.byTimeWeather__field > ul > li:first-child {
+  color: #595959;
+}
+
+.byTimeWeather__field > ul:first-child > li:first-child {
+  color: black;
+}
+
+.byTimeWeather__field > ul > li {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.byTimeWeather__field > ul > li:nth-child(3) {
+  margin-bottom: 1.75rem;
+}
+
+.byTimeWeather__field > ul > li:last-child {
+  margin: 0;
 }
 
 /*Mobile*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .MainWeather__wrapper {
-    border: 1px solid red;
     padding: 0.75rem;
   }
   .MainWeather__header {
-    font-size: 2rem;
-    color: white;
+    margin-bottom: 6rem;
+    font-size: 2.5rem;
   }
 
-  .MainWeather__section {
-    background: #fff;
-    width: calc(100% - 1.5rem);
-  }
-
-  .byTimeWeather__wrapper {
-    width: 100%;
-  }
-
-  .byTimeWeather__field {
-    border: 1px solid black;
-    width: 100%;
+  .MainWeather__timeStamp > div {
+    margin-bottom: 0.5rem;
   }
 
   .byTimeWeather__title {
-    text-align: center;
+    font-size: 1.75rem;
+    margin-bottom: 3rem;
+  }
+
+  .byTimeWeather__field > ul > li {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .MainWeather__wrapper {
+    padding: 0.5rem;
+  }
+  .MainWeather__header {
+    margin-bottom: 5rem;
+    font-size: 2rem;
+  }
+
+  .MainWeather__timeStamp > div {
+    margin-bottom: 0.25rem;
+  }
+
+  .byTimeWeather__title {
+    font-size: 1.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .byTimeWeather__field > ul > li {
     font-size: 1.25rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .MainWeather__wrapper {
+    padding: 0.5rem;
+  }
+  .MainWeather__header {
+    margin-bottom: 5rem;
+    font-size: 1.5rem;
+  }
+
+  .MainWeather__locationInfo {
+    font-size: 1.25rem;
+  }
+
+  .MainWeather__timeStamp > div {
+    margin-bottom: 0.25rem;
+  }
+
+  .byTimeWeather__title {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+  }
+
+  .byTimeWeather__field > ul > li {
+    font-size: 1rem;
   }
 }
