--- a/css/CurrentWeather.css
+++ b/css/CurrentWeather.css
@@ -4,6 +4,7 @@
 
 /* Common */
 .CurrentWeather__wrapper {
+  position: relative;
   padding: 1rem;
 }
 
@@ -72,6 +73,10 @@
   font-size: 1.75rem;
 }
 
+.CurrentWeather__section > ul > li:first-child {
+  cursor: pointer;
+}
+
 .CurrentWeather__section > ul > li > span {
   padding-right: 0.5rem;
 }
@@ -82,6 +87,24 @@
 
 .Current__icon > i {
   color: black;
+}
+
+.CurrentWeather__scrollDownBtn {
+  font-size: 2rem;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.CurrentWeather__scrollDownBtn > a {
+  display: block;
+  color: var(--white-color);
 }
 
 /* Extra small devices (phones, 600px and down) */
