--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "./CurrentWeather.css";
 @import "./MainWeather.css";
 @import "./addrSearch.css";
+@import "./SharePage.css";
 
 *,
 *:before,
