--- a/css/SharePage.css
+++ b/css/SharePage.css
@@ -1,31 +1,85 @@
 .sharePage {
   /* display: none; */
   position: fixed;
-  display: flex;
   left: 0;
   top: 0;
   z-index: 10;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
+  padding-top: 20%;
 }
 
 .content-wrapper {
-  align-self: center;
-  padding: 1rem;
+  position: relative;
+  padding: 2rem;
+  padding-bottom: 4rem;
   background: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80%;
-  max-width: 430px;
+  width: 70%;
+  max-width: 370px;
   min-width: 340px;
-  min-height: 500px;
-  margin: auto;
+  margin: 0 auto;
+}
+
+/* Add animation */
+.content-wrapper.zoomIn {
+  -webkit-animation-name: zoomIn;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoomIn;
+  animation-duration: 0.6s;
+}
+
+.content-wrapper.zoomOut {
+  -webkit-animation-name: zoomOut;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoomOut;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoomIn {
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes zoomOut {
+  from {
+    -webkit-transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(0);
+  }
+}
+
+@keyframes zoomOut {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0);
+  }
 }
 
 .content-wrapper h3 {
   text-align: center;
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  font-weight: bole;
 }
 
 .modal__desc {
@@ -36,6 +90,7 @@
 
 .modal__desc > span {
   text-align: center;
+  font-size: 1rem;
 }
 
 .modal__content {
@@ -66,4 +121,20 @@
 }
 
 img {
+}
+
+.modal__closeBtn {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  background: inherit;
+  border: none;
+  outline: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+.modal__closeBtn:hover {
+  opacity: 0.5;
 }
