--- a/css/MainWeather.css
+++ b/css/MainWeather.css
@@ -1,15 +1,12 @@
-:root {
-  --white-color: #fbfbfc;
-}
-
 /*Common*/
 .MainWeather__wrapper {
   padding: 1rem;
+  position: relative;
 }
 
 .MainWeather__header {
   margin-bottom: 7rem;
-  color: var(--white-color);
+  color: var(--text-color);
   font-size: 2.75rem;
 }
 
@@ -18,7 +15,7 @@
 }
 
 .MainWeather__section {
-  background: var(--white-color);
+  background: #fbfbfc;
 }
 
 .byTimeWeather {
