--- a/css/page.css
+++ b/css/page.css
@@ -4,7 +4,7 @@
 
 #Page-Container {
   position: relative;
-  background: #222;
+  background-color: var(--page-container-background);
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
@@ -32,7 +32,7 @@
   width: 100vw;
   max-width: 1280px;
   min-width: 360px;
-  background: #ff8686;
+  background-color: var(--page-background);
   float: left;
 }
 
